# scc-mcp

./: .gitignore  README.md  pyproject.toml  resource_loader.py  server.py
prompts/: __init__.py  templates.py
resources/: partitions.yaml  quickstart.md  scheduling.yaml
resources/commands/: job_submission.yaml  modules.yaml  storage.yaml
scripts/: scrape_and_ingest_techweb.py
tools/: __init__.py  search_docs.py
